<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- common -->
    <string name="button_ok">OK</string>
    <string name="button_retry">RETRY</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_save">Save</string>
    <string name="button_confirm">Confirm</string>
    <string name="button_continue">Continue</string>
    <string name="button_yes">Yes</string>
    <string name="button_done">Done</string>
    <string name="bhd">BHD</string>
    <string name="logout">Logout</string>
    <string name="email_help">I need help with mobile app</string>
    <string name="common_error_try_later">Please try again later</string>
    <string name="button_skip">Skip</string>

    <!-- Biometric start region -->
    <string name="biometric_dialog_title">Authentication</string>
    <string name="biometric_dialog_subtitle">Confirm your screen lock Biometrics to use this feature</string>
    <string name="biometric_dialog_use_alternative">Use Pin</string>
    <string name="biometric_go_to_settings_title">Biometrics required</string>
    <string name="biometric_go_to_settings_description">You need enable unlocking by fingerprint in settings</string>
    <string name="biometric_error_locked_out_permanent">Too many wrong attempts. Biometric authentication is disabled until the you unlock with primary credential (i.e. pin, pattern, or password). Try again after unlocking or use pin.</string>
    <string name="biometric_error_locked_out">Too many wrong attempts. Try again after 30 seconds or use pin.</string>
    <string name="biometric_error_locked_out_registration">Too many wrong attempts. Please wait 30 seconds to try again.</string>
    <string name="biometric_error_not_available">Biometrics option is not available on this device</string>
    <string name="biometric_error_passcode_not_set">Phone not secured by pin, pattern or password, or SIM is currently locked.</string>
    <string name="biometric_error_not_enrolled">No Biometrics option enrolled on this device</string>
    <string name="biometric_error_unknown">Failed to verify Biometrics on this device.</string>
    <string name="biometric_error_not_setup">Biometric enrollment is not completed</string>
    <string name="biometric_error_cannot_go_ahead">You can\'t use this feature without Biometric\n\n%s</string>
    <string name="go_to_settings">Go to settings</string>

    <string name="biometric_skip_dialog_title">Biometrics Required</string>
    <string name="biometric_skip_dialog_subtitle">You need to enable the biometrics option in Settings</string>
    <string name="biometric_skip_dialog_button">Enable Biometrics</string>
    <!-- Biometric end region -->

    <!-- error messages start region -->
    <string name="error_generic">Failed to complete at the moment, please try again</string>
    <string name="error_please_try_again">Please try again</string>
    <string name="error_message_common">Something went wrong, please try again</string>
    <string name="error_message_authenticate">Failed to authenticate!</string>
    <string name="error_message_pin_empty">Pin can\'t be empty</string>
    <string name="error_message_pin_to_short">Pin must not be less than 4 characters</string>
    <string name="error_message_pin_to_long">Password must not be more than 128 characters</string>
    <string name="error_message_server_temporary_unavailable">Server is temporarily unavailable.</string>
    <string name="error_message_server_maintenance">Technical works are in progress.</string>
    <!-- error messages end region -->

    <!-- pin messages-->
    <string name="network_error_connection">No internet connection.</string>
    <string name="network_error_connection_timeout">Connection Timeout</string>
    <string name="logout_message">You\'ve been logged out</string>
    <string name="name_initials">%s%s</string>
    <string name="enter_pin">Enter your pin</string>
    <string name="confirm_pin">Confirm your pin</string>
    <string name="registration_pin_msg">For enhanced security measures, kindly create a unique Open Banking Pin</string>
    <string name="auth_pin_msg">Enter your pin details for authentication</string>
    <string name="registration_pin_title">Pin Details</string>
    <string name="auth_pin_title">Pin Details</string>
    <string name="mismatch_pin">Mismatch pin</string>
    <string name="invalid_pin">Invalid pin</string>
    <string name="switch_to_biometrics">Authenticate using Biometrics</string>
    <string name="authenticate">Authenticate</string>
    <string name="auth_msg">To start using this feature, please complete the following authentication process with your credentials</string>
    <!-- pin messages-->

    <string name="registration_failure">Registration was not successful, please try again</string>
    <string name="registered_successfully">Registered successfully</string>
    <string name="enroll_invalid_keystore">Failed to retrieve valid security level</string>
    <string name="auth_consent_intro">Select accounts to share your consent</string>
    <string name="decline">Decline</string>
    <string name="approve">Approve</string>
    <string name="permissions">Permissions</string>

    <string name="auth_msg_success">Consent updated</string>

    <!--Terms & Conditions-->
    <string name="terms_conditions">Terms &amp; Conditions</string>
    <string name="accept">Accept &amp; Proceed</string>
    <!--Terms & Conditions-->

    <string name="dummy_terms_conditions">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut tempor orci vitae mi finibus tempus. Sed et sem diam. Duis eget convallis eros, a tristique ante. Nam dignissim purus vitae sollicitudin cursus. Donec facilisis sagittis est ut dapibus. Nunc erat urna, aliquam eget ligula at, iaculis ornare ex. Quisque dapibus ante consectetur ante pulvinar suscipit. Integer commodo placerat vestibulum. Cras tristique augue mollis risus bibendum, eu elementum diam dignissim. Aliquam erat volutpat. Quisque tortor urna, blandit eu massa nec, vulputate congue metus. Donec leo diam, iaculis sed porttitor a, vestibulum at lorem.\n\nQuisque at dignissim risus, a ullamcorper urna. Vivamus quam odio, sagittis quis feugiat sit amet, blandit vel neque. Morbi pulvinar turpis eget tellus ullamcorper, sit amet imperdiet risus tempor. Vestibulum id enim venenatis, vulputate augue id, iaculis elit. Donec a massa sed sapien pharetra venenatis. Aenean placerat, erat a vulputate auctor, sapien tellus consequat leo, ut porttitor enim magna eget mi. Maecenas quam turpis, porttitor sit amet facilisis a, viverra at elit. Aliquam consequat auctor nulla, quis aliquet ligula. Ut molestie aliquet diam, at pretium nisl. Duis vestibulum est sapien, vitae ullamcorper lectus aliquet viverra. Suspendisse viverra diam sit amet ligula commodo, porttitor egestas elit molestie. Nam vel rutrum lacus. Etiam eget mauris vitae tortor scelerisque elementum. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.\n\nMauris tincidunt ultricies eros nec ultrices. Maecenas at ligula ac odio iaculis molestie eget quis nulla. Curabitur dictum metus arcu, id faucibus erat aliquet ut. Nam nec ipsum et purus ullamcorper blandit eget at velit. Etiam vel accumsan turpis. Donec pharetra accumsan urna, nec hendrerit mi sollicitudin quis. Aenean dapibus mauris id quam sagittis, vel interdum elit pretium. Donec dictum est ac elit laoreet finibus. Mauris eu est ligula. Mauris diam orci, hendrerit eget tellus id, tincidunt vulputate justo. Nam tincidunt mi ut suscipit sollicitudin. Praesent vestibulum lorem quis risus tincidunt varius. Integer congue maximus diam, eu ultricies eros ultricies sit amet.\n\nPraesent sed tortor at eros aliquet sagittis. Curabitur lobortis lacus ut sem pretium luctus. Etiam id cursus nulla. Integer consectetur velit diam, sed tempus eros vestibulum eget. Morbi ut felis at quam tempor aliquet at sit amet nulla. Pellentesque vel odio vestibulum risus tempor viverra ac nec ex. Phasellus sit amet ipsum ac magna dictum scelerisque.\n\nFusce pretium accumsan nibh, vel euismod odio luctus quis. In lobortis erat vitae quam luctus, id fermentum turpis posuere. Nulla quis erat ornare, ullamcorper ipsum eu, dictum sem. Nam pulvinar libero in purus tristique, in pulvinar lorem facilisis. Quisque at magna elementum, volutpat neque at, suscipit enim. Sed elementum eros gravida, sagittis massa vulputate, mollis turpis. Sed semper libero eu laoreet auctor. Cras ante ex, blandit ac est laoreet, maximus vulputate odio. Nam bibendum magna orci, sit amet vestibulum mauris pellentesque et. In pellentesque lorem eu elit pulvinar scelerisque. Curabitur sed purus risus. Proin sed diam nisi. Nunc eget dapibus turpis.</string>
    <string name="title_dashboard">Dashboard</string>

    <!-- Consent Authorization -->
    <string name="title_consent_authorize">Consent Authorization</string>
    <string name="title_consent_authorize_ais">AIS Consent Authorization</string>
    <string name="title_consent_authorize_pis">PIS Consent Authorization</string>
    <string name="creditor">Creditor:</string>
    <string name="amount">Amount:</string>
    <string name="identification">Account:</string>
    <string name="error_no_account_selected">Please select at least one account for approval</string>
    <!-- Consent Authorization -->

    <!-- Manage Consent -->
    <string name="title_manage_consent_ais">Consent Management</string>
    <string name="manage_consent_intro">List of all consents.\nSelect the account you want to manage</string>
    <string name="manage">Manage</string>
    <string name="manage_consent_no_item">You haven\'t authorized any consent yet.</string>
    <string name="manage_consent_failed">Failed to load list, try again later</string>
    <!-- Manage Consent -->

    <!-- Revoke Consent -->
    <string name="title_revoke_consent">Revoke Consent</string>
    <string name="revoke_consent_intro">You are about to revoke following consent</string>
    <string name="revoke">Revoke</string>
    <string name="accounts">Accounts:</string>
    <string name="end_msg_revoke">Consent has been revoked!</string>
    <string name="authorised_on">Authorised on:</string>
    <string name="expires_on">Expires on:</string>
    <!-- Revoke Consent -->

    <!-- Dashboard -->
    <string name="dashboard_welcome_msg">Welcome to\nTarabut Gateway Open Banking</string>
    <string name="de_registration">Deregistration</string>
    <string name="deregister_dialog_title">Deregistration</string>
    <string name="deregister_dialog_message">You are about to deregister this device from the Open Banking.\nAre you sure?</string>
    <string name="deregister_dialog_complete">Device has been deregistered successfully!</string>
    <!-- Dashboard -->

    <!--NBB SDK dashboard start region-->
    <string name="obp_not_enabled_title">Open Banking not enabled</string>
    <string name="obp_not_enabled_message">Please enable Open Banking to continue</string>
    <string name="enable">Enable</string>
    <!--NBB SDK dashboard end region-->

    <!-- Dialog Notification Alert-->
    <string name="dialog_notification_title">Consent Authorization</string>
    <string name="dialog_notification_description">You received a consent authorization request. Would you like to continue?</string>
    <!-- Dialog Notification Alert-->

</resources>