<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/pinView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        tools:visibility="visible">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/labelTitle"
            style="@style/TextBodyBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auth_pin_title"
            android:textColor="@color/dark_blue"
            android:layout_marginTop="@dimen/margin_top_space"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title"
            style="@style/TextMedium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/auth_pin_msg"
            android:textColor="@color/dark_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelTitle"
            app:layout_constraintVertical_bias="0.8" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pinLayout"
            style="@style/TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_pin"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="8"
                android:imeOptions="actionNext"
                android:inputType="numberPassword"
                android:lines="1"
                android:maxLength="4"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                tools:text="1234" />
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:id="@+id/separator1"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="0dp"
            android:background="@color/grey"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pinLayout"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnBiometricEnroll"
            style="@style/ButtonTransparent"
            android:text="@string/switch_to_biometrics"
            android:visibility="gone"
            tools:visibility="visible"
            app:layout_constraintTop_toBottomOf="@+id/separator1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btnContinue"
            app:layout_constraintVertical_bias="1.0" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnContinue"
            style="@style/ButtonSolidTurquoise"
            android:text="@string/button_continue"
            app:layout_constraintTop_toBottomOf="@+id/separator1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>