<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#33000000">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingTop="30dp">

            <TextView
                android:id="@+id/alert_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/dialog_notification_title"
                android:textColor="@color/black"
                android:textSize="@dimen/text_regular"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/alert_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:text="@string/dialog_notification_description"
                android:textColor="@color/black"
                android:textSize="@dimen/text_regular" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="30dp"
                android:background="@color/grey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                    android:background="?android:attr/selectableItemBackground"
                    android:gravity="center"
                    android:id="@+id/alert_cancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:padding="10dp"
                    android:text="@string/button_cancel"
                    android:textAllCaps="false"
                    android:textColor="@color/turquoise"
                    android:textSize="@dimen/text_regular" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="50dp"
                    android:background="@color/grey_bg" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:background="?android:attr/selectableItemBackground"
                    android:gravity="center"
                    android:id="@+id/alert_verify"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:textColor="@color/turquoise"
                    android:padding="10dp"
                    android:text="@string/button_continue"
                    android:textAllCaps="false"
                    android:textSize="@dimen/text_regular"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>