<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/componentObpNotEnabled"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/warningIv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/image_warning"
            app:layout_constraintBottom_toTopOf="@+id/obpNotConnectedTitleTv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/obpNotConnectedTitleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            style="@style/TextBodyBold"
            android:text="@string/obp_not_enabled_title"
            app:layout_constraintBottom_toTopOf="@+id/obpNotConnectedMessageTv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/warningIv" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/obpNotConnectedMessageTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_default"
            style="@style/TextBody"
            android:text="@string/obp_not_enabled_message"
            app:layout_constraintBottom_toTopOf="@+id/enableObpBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/obpNotConnectedTitleTv" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/enableObpBtn"
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/padding_default"
            android:text="@string/enable"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            style="@style/ButtonSolidTurquoise"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/obpNotConnectedMessageTv" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>