<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/componentAuthConsent"
        android:paddingTop="20dp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_start"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintGuide_begin="@dimen/margin_outer_vertical"
            android:orientation="vertical"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_end"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintGuide_end="@dimen/margin_outer_vertical"
            android:orientation="vertical"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/consentTpp"
            style="@style/TextMediumBold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:lines="1"
            android:paddingBottom="10dp"
            android:textColor="@color/dark_blue"
            app:layout_constraintEnd_toStartOf="@+id/guide_end"
            app:layout_constraintStart_toEndOf="@+id/guide_start"
            app:layout_constraintTop_toBottomOf="@+id/title"
            tools:text="TG Demo" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/consentTitle"
            style="@style/TextMedium"
            android:visibility="visible"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/auth_consent_intro"
            android:textColor="@color/dark_blue"
            app:layout_constraintTop_toBottomOf="@+id/pisDetailView"
            app:layout_constraintEnd_toStartOf="@+id/guide_end"
            app:layout_constraintStart_toEndOf="@+id/guide_start" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/pisDetailView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@+id/guide_end"
            app:layout_constraintStart_toEndOf="@+id/guide_start"
            app:layout_constraintTop_toBottomOf="@+id/consentTpp"
            tools:visibility="visible">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/labelPispName"
                style="@style/TextMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ellipsize="end"
                android:lines="1"
                android:text="@string/creditor"
                android:textColor="@color/grey"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/pispName"
                style="@style/TextMedium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:lines="1"
                android:textColor="@color/dark_blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/labelIdentity"
                app:layout_constraintTop_toTopOf="@+id/labelPispName"
                tools:text="Tom Hanks" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/labelIdentity"
                style="@style/TextMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ellipsize="end"
                android:lines="1"
                android:paddingStart="0dp"
                android:paddingEnd="10dp"
                android:text="@string/identification"
                android:textColor="@color/grey"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/labelPispName" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/pispIdentity"
                style="@style/TextMedium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:lines="1"
                android:textColor="@color/dark_blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/labelIdentity"
                app:layout_constraintTop_toTopOf="@+id/labelIdentity"
                tools:text="BH67REDB00001299123456" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/labelPispAmount"
                style="@style/TextMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ellipsize="end"
                android:lines="1"
                android:text="@string/amount"
                android:textColor="@color/grey"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/labelIdentity" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/pispAmount"
                style="@style/TextMedium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:lines="1"
                android:textColor="@color/dark_blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/labelIdentity"
                app:layout_constraintTop_toTopOf="@+id/labelPispAmount"
                tools:text="BHD 617.45" />

            <View
                android:id="@+id/separator1"
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:layout_marginTop="16dp"
                android:alpha="0.5"
                android:background="@color/grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pispAmount" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/logoView"
            android:src="@drawable/ic_logo_khcb"
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guide_end"
            app:layout_constraintStart_toEndOf="@+id/guide_start"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title"
            style="@style/TextMediumBold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:lines="1"
            android:visibility="visible"
            android:gravity="center_horizontal"
            android:textColor="@color/grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guide_end"
            app:layout_constraintStart_toEndOf="@+id/guide_start"
            app:layout_constraintTop_toBottomOf="@id/logoView"
            tools:text="KHCB 360" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvConsentAccounts"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="16dp"
            tools:listitem="@layout/cell_accounts"
            app:layout_constraintBottom_toTopOf="@+id/labelPermissions"
            app:layout_constraintEnd_toStartOf="@+id/guide_end"
            app:layout_constraintStart_toEndOf="@+id/guide_start"
            app:layout_constraintTop_toBottomOf="@+id/consentTitle" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/labelPermissions"
            style="@style/TextBodyBold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/permissions"
            android:textColor="@color/dark_blue"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/scrollViewPermissions"
            app:layout_constraintEnd_toStartOf="@+id/guide_end"
            app:layout_constraintStart_toEndOf="@+id/guide_start" />

        <ScrollView
            android:id="@+id/scrollViewPermissions"
            style="@style/TextMedium"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginBottom="16dp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/btnApprove"
            app:layout_constraintEnd_toStartOf="@+id/guide_end"
            app:layout_constraintStart_toEndOf="@+id/guide_start">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPermissions"
                style="@style/TextMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_blue"
                app:layout_constraintBottom_toTopOf="@+id/btnApprove"
                app:layout_constraintEnd_toStartOf="@+id/guide_end"
                app:layout_constraintStart_toEndOf="@+id/guide_start" />
        </ScrollView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnDecline"
            style="@style/ButtonTransparent"
            android:layout_width="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="0dp"
            android:text="@string/decline"
            app:layout_constraintTop_toTopOf="@+id/btnApprove"
            app:layout_constraintBottom_toBottomOf="@+id/btnApprove"
            app:layout_constraintEnd_toStartOf="@+id/btnApprove"
            app:layout_constraintStart_toEndOf="@+id/guide_start" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnApprove"
            style="@style/ButtonSolidTurquoise"
            android:layout_width="0dp"
            android:layout_marginStart="8dp"
            android:text="@string/approve"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guide_end"
            app:layout_constraintStart_toEndOf="@+id/btnDecline" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>